Добавил пару JS-файлов

--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
 </head>
 
 <body>
-	<script src="alert.js"></script>
+	<!-- 
+	<script src="js/alert.js"></script> 
+	<script src="js/variable.js"></script> -->
+	<script src="js/whatIsYourName.js"></script>
 </body>
 
 </html>
