--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 </head>
 
 <body>
-	<!-- 
-	<script src="js/alert.js"></script> 
-	<script src="js/variable.js"></script> -->
+
+	<script src="js/alert.js"></script>
+	<script src="js/variable.js"></script>
 	<script src="js/whatIsYourName.js"></script>
 </body>
 
