--- a/index.html
+++ b/index.html
@@ -9,10 +9,15 @@
 </head>
 
 <body>
-
+	<!-- 
 	<script src="js/alert.js"></script>
 	<script src="js/variable.js"></script>
 	<script src="js/whatIsYourName.js"></script>
+	<script src="js/typeof.js"></script>
+	<script src="js/if_else.js"></script>
+	<script src="js/what_the_number.js"></script>
+	<script src="js/if_to_question.js"></script> -->
+	<script src="js/if_else_to_question.js"></script>
 </body>
 
 </html>
