--- a/js/index.html
+++ b/js/index.html
@@ -3,13 +3,11 @@
 
 <head>
 	<meta charset="UTF-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="ToDoList" content="width=device-width, initial-scale=1.0">
 	<title>Тесты</title>
 </head>
 
 <body>
-	<script src="closure.js"></script>
+	<script src="introduction-browser-events.js"></script>
 </body>
 
 </html>
