--- a/homework/calc/index.html
+++ b/homework/calc/index.html
@@ -16,29 +16,29 @@
 <body>
 	<main>
 		<div class="calc">
-			<div class="line">1,258.2</div>
+			<div class="line" id="line">0</div>
 			<div class="buttons">
-				<button class="button c">C</button>
-				<button class="button backspace">del</button>
-				<button class="button operation">/</button>
-				<button class="button">7</button>
-				<button class="button">8</button>
-				<button class="button">9</button>
-				<button class="button operation">×</button>
-				<button class="button">4</button>
-				<button class="button">5</button>
-				<button class="button">6</button>
-				<button class="button operation">−</button>
-				<button class="button">1</button>
-				<button class="button">2</button>
-				<button class="button">3</button>
-				<button class="button operation">+</button>
-				<button class="button zero">0</button>
-				<button class="button operation">=</button>
+				<button class="button c" id="c">C</button>
+				<button class="button backspace" id="del">del</button>
+				<button class="button operation" id="division">/</button>
+				<button class="button num">7</button>
+				<button class="button num">8</button>
+				<button class="button num">9</button>
+				<button class="button operation" id="multiplication">×</button>
+				<button class="button num">4</button>
+				<button class="button num">5</button>
+				<button class="button num">6</button>
+				<button class="button operation" id="subtracting">−</button>
+				<button class="button num">1</button>
+				<button class="button num">2</button>
+				<button class="button num">3</button>
+				<button class="button operation" id="adding">+</button>
+				<button class="button num zero">0</button>
+				<button class="button operation" id="equals">=</button>
 			</div>
 		</div>
 	</main>
-	<!-- <script src="calc.js"></script> -->
+	<script src="main.js"></script>
 </body>
 
 </html>
